--- a/src/styles/_variables.module.scss
+++ b/src/styles/_variables.module.scss
@@ -6,6 +6,7 @@ $secondary-color: #393737;
 $white-bg: #FFFFFF;
 $transperent-bg: #FFFFFF40;
 $faded-bg: #39373730;
+$creamy-bg: #f7f7f7;
 
 // Borders
 $white-border: #FFFFFF;
