--- a/src/pages/home/top-products/styles.module.scss
+++ b/src/pages/home/top-products/styles.module.scss
@@ -32,6 +32,8 @@
         .section-title {
             font-size: 32px;
             color: $text-brown;
+            padding: 0px 30px;
+            box-sizing: border-box;
         }
 
         .section-redirection-button {
@@ -42,75 +44,70 @@
 
     .animation-container {
         display: flex;
-        padding: 30px 0px;
+        padding: 30px;
         box-sizing: border-box;
-        overflow-x: hidden; // Hide horizontal scrollbar
 
         .cards-container {
             display: flex;
             align-items: center;
             justify-content: center;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 50px;
 
             .card {
-                height: 390px;
-                width: 300px;
+                width: fit-content;
+                height: fit-content;
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: flex-start;
                 flex-direction: column;
-                gap: 10px;
-                padding: 10px;
-                box-sizing: border-box;
-                border-radius: 8px;
-                border: 2px solid $faded-border;
-                position: relative;
+                gap: 20px;
                 cursor: pointer;
 
-                &:hover {
-                    box-shadow: 4px 4px 10px $primary-shadow;
-                }
-
                 .image-section {
-                    width: 100%;
-                    height: 280px; //300 - 20
-                    border-radius: 4px;
-                    border: 1px solid $primary-border;
+                    width: 300px;
+                    height: 300px;
+                    border-radius: 5px;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        transition: transform 1s ease-in-out;
+
+                        &:hover {
+                            transform: scale(1.2);
+                        }
+                    }
+
                 }
 
                 .description-section {
-                    width: 100%;
                     display: flex;
-                    align-items: center;
+                    align-items: flex-start;
                     justify-content: flex-start;
                     flex-direction: column;
-                    margin-top: 10px;
+                    gap: 5px;
 
                     .product-name {
                         width: 100%;
                         text-align: left;
                         font-size: 18px;
                         font-weight: 600;
-                        color: $text-brown;
+                        color: $text-highlight;
                     }
-                }
 
-                .view-details-button {
-                    width: 100%;
-                    display: flex;
-                    justify-content: flex-end;
-                    position: absolute;
-                    bottom: 10px;
-                    right: 10px;
-                    font-size: 14px;
-                    color: $text-highlight;
+                    .view-details-button {
+                        font-size: 12px;
+                        color: $text-grey;
 
-                    &:hover {
-                        color: $text-brown;
+                        &:hover {
+                            color: $text-dark;
+                        }
                     }
                 }
             }
         }
+
     }
 }
