--- a/src/pages/brochure/styles.module.scss
+++ b/src/pages/brochure/styles.module.scss
@@ -11,7 +11,8 @@
 
     .brouchure-frame {
         width: 90%;
-        height: auto;
+        height: 90vh;
         border: none;
+        margin: auto;
     }
 }
