--- a/src/pages/contact-us/styles.module.scss
+++ b/src/pages/contact-us/styles.module.scss
@@ -8,4 +8,73 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 50px;
+
+    .contact-card-container {
+        width: 90%;
+        height: 80vh;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 20px;
+        margin: auto;
+        padding: 30px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background-color: $creamy-bg;
+
+        .qr-container {
+            width: 50%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 20px;
+            border-right: 5px solid $faded-border;
+
+            img {
+                width: 300px;
+                height: 300px;
+            }
+
+            .support-text {
+                color: $text-highlight;
+            }
+        }
+
+        .contact-details {
+            width: 50%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            flex-direction: column;
+            gap: 30px;
+            padding: 20px 50px;
+            box-sizing: border-box;
+
+            .detail-wrapper {
+                width: 100%;
+                display: flex;
+                align-items: flex-start;
+                justify-content: flex-start;
+                flex-direction: column;
+                gap: 10px;
+
+                .detail-title {
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: $text-dark;
+                    border-bottom: 3px solid $primary-border;
+                }
+
+                .detail-item {
+                    font-size: 18px;
+                    line-height: 26px;
+                    color: $text-dark;
+                }
+            }
+        }
+    }
 }
