--- a/src/pages/contact-us/styles.module.scss
+++ b/src/pages/contact-us/styles.module.scss
@@ -75,6 +75,25 @@
                     color: $text-dark;
                 }
             }
+
+            .social-media-container {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                flex-wrap: wrap;
+                gap: 20px 25px;
+                margin-top: 10px;
+
+                .media-item {
+                    font-size: 24px;
+                    color: $text-dark;
+
+                    &:hover {
+                        color: $text-highlight;
+                    }
+                }
+            }
         }
     }
 }
