--- a/src/pages/products/[id]/styles.module.scss
+++ b/src/pages/products/[id]/styles.module.scss
@@ -54,7 +54,7 @@ $image-section-width: 500px;
             align-items: flex-start;
             justify-content: flex-start;
             flex-direction: column;
-            gap: 10px;
+            gap: 50px;
 
             .basic-details-section {
                 width: 100%;
@@ -116,26 +116,44 @@ $image-section-width: 500px;
                 align-items: center;
                 justify-content: flex-start;
                 flex-wrap: wrap;
-                gap: 10px;
+                gap: 20px;
+                margin-top: 20px;
 
-                .usage-card {
-                    width: 90px;
+                .section-head {
+                    font-size: 18px;
+                    color: $text-dark;
+                    font-weight: 600;
+                }
+
+                .usage-container {
+                    width: 100%;
                     display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    padding: 10px;
-                    box-sizing: border-box;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: row;
+                    gap: 30px;
 
-                    .usage-image {
-                        width: 40px;
-                        height: fit-content;
-                    }
+                    .usage-card {
+                        width: fit-content;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
+                        gap: 20px;
+                        padding: 10px;
+                        box-sizing: border-box;
 
-                    .usage-description {
-                        width: 100%;
-                        text-align: center;
-                        color: $text-highlight;
-                        font-size: 14px;
+                        .usage-image {
+                            height: 60px;
+                            width: auto;
+                        }
+
+                        .usage-description {
+                            width: 100%;
+                            text-align: center;
+                            color: $text-highlight;
+                            font-size: 14px;
+                        }
                     }
                 }
             }
@@ -152,8 +170,53 @@ $image-section-width: 500px;
                     font-size: 18px;
                     color: $text-dark;
                     font-weight: 600;
-
                 }
+
+                .section-items-table {
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    flex-direction: column;
+                    gap: 0px;
+                    margin-top: 10px;
+
+                    .size-section {
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-start;
+                        flex-direction: row;
+
+
+                        .size-number,
+                        .size-length,
+                        .size-thickness {
+                            width: 100px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            padding: 10px;
+                            box-sizing: border-box;
+                            border-radius: 4px;
+                            border: 1px solid $faded-border;
+                            font-size: 16px;
+                            font-weight: 500;
+                            color: $text-brown;
+                        }
+
+                        .size-number {
+                            width: 150px;
+                        }
+
+                        .size-length {
+                            width: 150px;
+                        }
+
+                        .size-thickness {
+                            width: 150px;
+                        }
+                    }
+                }
+
             }
         }
     }
