--- a/src/styles/_variables.module.scss
+++ b/src/styles/_variables.module.scss
@@ -26,3 +26,10 @@ $max-view-width: 1450px;
 
 // Shadow
 $primary-shadow: #B7A69670;
+
+// Device 
+$desktop-mini: "1150px";
+$tab: "1024px";
+$tab-mini: "768px";
+$mobile-horizontal: "500px";
+$mobile: "376px";
