--- a/src/pages/about-us/styles.module.scss
+++ b/src/pages/about-us/styles.module.scss
@@ -54,6 +54,7 @@
             align-items: center;
             justify-content: center;
             flex-direction: row;
+            flex-wrap: wrap;
             gap: 50px;
             margin-bottom: 50px;
 
