--- a/src/pages/home/hero-section/styles.module.scss
+++ b/src/pages/home/hero-section/styles.module.scss
@@ -28,6 +28,7 @@
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
 
@@ -97,32 +98,6 @@
                         background-color: $primary-border;
                         color: $text-white;
                     }
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: $tab) {
-    .hero-section-main {
-        .carousel-page {
-            height: 100%;
-
-            &.left,
-            &.right {
-                flex-direction: column;
-            }
-
-            .carousel-image-section {
-                display: none;
-            }
-
-            .carousel-text-section {
-                width: 100%;
-                height: calc(100vh - $header-height);
-
-                .text-contents {
-                    bottom: 100px;
                 }
             }
         }
